# ticTacToe

./: LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: python-publish.yml
ai/: BoardNode.py  TNode.py
game/: Board.py  TicTacToe.py
src/tictactoe/: __main__.py
src/tictactoe/ai/: BoardNode.py  TNode.py
src/tictactoe/game/: Board.py  GameEnums.py  TicTacToe.py
src/tictactoe/ui/: GraphicUi.py  TextUi.py
ui/: GraphicUi.py  TextUi.py
