[project]
name = "saro476-tictactoe"
version = "0.1.0"
description = "A simple Tic-Tac-Toe AI"
authors = [
    {name = "saro476", email = "aaloway@gmail.com"},
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "saro476-ai-lib>=0.1.1"
]
requires-python = ">=3"
license = {file = "LICENSE"}
readme = "README.md"

[project.gui-scripts]
tictactoe = "tictactoe:main"

[project.urls]
"Homepage" = "https://github.com/saro476/tictactoe"
"Bug Tracker" = "https://github.com/saro476/tictactoe/issues"